2006-07-18  Brian Ford  <Brian.Ford@FlightSafety.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h (mmap_region_status): New enum.
	(mmap_is_attached_or_noreserve_page): Adjust prototype and rename
	as below.
	* mmap.cc (mmap_is_attached_or_noreserve_page):  Rename
	mmap_is_attached_or_noreserve.  Add region length parameter.
	Return enum above.
	* exceptions.cc (_cygtls::handle_exceptions): Accomodate above.
	* fhandler.cc (fhandler_base::raw_read): Call above for NOACCESS
	errors and retry on success to allow reads into untouched
	MAP_NORESERVE buffers.

2006-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::ioctl): Fix typo in lint
	directive.

2006-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (posix_openpt): Export.
	* tty.cc (posix_openpt): New function.
	* include/cygwin/stdlib.h (posix_openpt): Declare.
	* include/cygwin/version.h: Bump API minor number.

2006-07-17  Christopher Faylor  <cgf@timesys.com>

	GCC 4.1 fixes.
	* cygheap.h (cygheap_user): Remove unneeded class names from function
	declaration.
	* fhandler.h (fhandler_base): Ditto.
	(fhandler_dev_floppy): Ditto.
	(fhandler_console): Ditto.
	* wininfo.h (wininfo): Ditto.
	* exceptions.cc (sigpacket::process): Avoid compiler errors about gotos
	and initialization.
	* fhandler_fifo.cc (fhandler_fifo::open): Ditto.
	* fhandler_floppy.cc (fhandler_dev_floppy::ioctl): Ditto.
	* fhandler_tty.cc (fhandler_tty_slave::ioctl): Ditto.
	* mmap.cc (mmap64): Ditto.
	* pipe.cc (fhandler_pipe::open): Ditto.
	* spawn.cc (spawn_guts): Ditto.

	* sec_helper.cc: Fix some comments.
	(get_null_sd): Move file-scope static to only function where it is
	used.

2006-07-14  Christopher Faylor  <cgf@timesys.com>

	* fork.cc (fork): Lock the process before forking to prevent things
	like new fds from being opened, etc.
	* sync.h (lock_process::dont_bother): New function.

2006-07-14  Christopher Faylor  <cgf@timesys.com>
